<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:gravity="center"
        android:text="@string/video_speed" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_slide_selected"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_select0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/video_speed_0"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_select1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/video_speed_1"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_select2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_tip_dialog"
            android:gravity="center"
            android:text="@string/filter_normal"
            android:textColor="@color/alp_background" />

        <TextView
            android:id="@+id/tv_select3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/video_speed_2"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_select4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/video_speed_3"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>