<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/bg_for_shatup"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="9dp"
        android:text="@string/permanent"
        android:textColor="@color/black"
        android:textSize="@dimen/one_level_title"/>

    <TextView
        android:id="@+id/tv8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_selector_background_ripple"
        android:gravity="center"
        android:padding="9dp"
        android:text="@string/no_sync"
        android:textColor="@color/black"
        android:textSize="@dimen/one_level_title"/>

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_selector_background_ripple"
        android:gravity="center"
        android:padding="9dp"
        android:text="@string/one_hour"
        android:textColor="@color/black"
        android:textSize="@dimen/one_level_title"/>

    <TextView
        android:id="@+id/tv3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_selector_background_ripple"
        android:gravity="center"
        android:padding="9dp"
        android:text="@string/one_day"
        android:textColor="@color/black"
        android:textSize="@dimen/one_level_title"/>

    <TextView
        android:id="@+id/tv4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_selector_background_ripple"
        android:gravity="center"
        android:padding="9dp"
        android:text="@string/one_week"
        android:textColor="@color/black"
        android:textSize="@dimen/one_level_title"/>

    <TextView
        android:id="@+id/tv5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_selector_background_ripple"
        android:gravity="center"
        android:padding="9dp"
        android:text="@string/one_month"
        android:textColor="@color/black"
        android:textSize="@dimen/one_level_title"/>

    <TextView
        android:id="@+id/tv6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_selector_background_ripple"
        android:gravity="center"
        android:padding="9dp"
        android:text="@string/one_season"
        android:textColor="@color/black"
        android:textSize="@dimen/one_level_title"/>

    <TextView
        android:id="@+id/tv7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_selector_background_ripple"
        android:gravity="center"
        android:padding="9dp"
        android:text="@string/one_year"
        android:textColor="@color/black"
        android:textSize="@dimen/one_level_title"/>

</LinearLayout>