<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="wrap_content"    android:background="@drawable/bg_for_shatup"    android:orientation="vertical">    <TextView        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:gravity="center"        android:padding="12dp"        android:text="@string/hint_use_other_browser"        android:textColor="@color/black"        android:textSize="@dimen/sp_13_text_size" />    <View style="@style/View_Line" />    <TextView        android:id="@+id/qq"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:background="@drawable/list_selector_background_ripple"        android:gravity="center"        android:padding="9dp"        android:text="@string/qq_browser"        android:textColor="@color/black"        android:textSize="@dimen/one_level_title" />    <TextView        android:id="@+id/uc"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:background="@drawable/list_selector_background_ripple"        android:gravity="center"        android:padding="9dp"        android:text="@string/uc_browser"        android:textColor="@color/black"        android:textSize="@dimen/one_level_title" />    <TextView        android:id="@+id/op"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:background="@drawable/list_selector_background_ripple"        android:gravity="center"        android:padding="9dp"        android:text="@string/opera_browser"        android:textColor="@color/black"        android:textSize="@dimen/one_level_title" />    <TextView        android:id="@+id/local"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:background="@drawable/list_selector_background_ripple"        android:gravity="center"        android:padding="9dp"        android:text="@string/local_browser"        android:textColor="@color/black"        android:textSize="@dimen/one_level_title" /></LinearLayout>