<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center">

    <TextView
        android:id="@+id/tv_title_transfer"
        style="@style/TransferTextView"
        android:layout_alignParentLeft="true"
        android:text="@string/type"
        android:textColor="#333333"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/tv_balance"
        style="@style/TransferTextView"
        android:layout_alignParentRight="true"
        android:text="@string/money"
        android:textSize="16dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_date"
        style="@style/TransferTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/tv_title_transfer"
        android:paddingTop="@dimen/dp15"
        android:text="@string/s_date"
        android:textColor="#999999"
        android:textSize="@dimen/sp_13_text_size" />

    <TextView
        android:id="@+id/tv_receipt"
        style="@style/TransferTextView"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tv_balance"
        android:paddingTop="@dimen/dp15"
        android:text="@string/pay_status"
        android:textColor="#999999"
        android:textSize="@dimen/sp_13_text_size" />

    <View
        android:id="@+id/view"
        style="@style/View_Line"
        android:layout_marginStart="@dimen/margin_screen_old"
        android:layout_alignParentBottom="true"
        android:visibility="gone" />

</RelativeLayout>