<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:background="@color/normal_bg"
              android:orientation="vertical">

    <TextView
        android:id="@+id/bdmap"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/baidu_map"/>

    <TextView
        android:id="@+id/gdmap"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/amap"/>

    <TextView
        android:id="@+id/ggmap"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/google_map"/>

</LinearLayout>