<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_for_shatup"
    android:orientation="vertical">

    <TextView
        android:id="@+id/save_image"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/save_image"
        android:textColor="@color/black"
        android:textSize="@dimen/one_level_title" />

    <View style="@style/View_Line" />

    <TextView
        android:id="@+id/edit_image"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/edit"
        android:textColor="@color/black"
        android:textSize="@dimen/one_level_title" />

    <View style="@style/View_Line" />

    <TextView
        android:id="@+id/identification_qr_code"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/scan_qr_code"
        android:textColor="@color/black"
        android:textSize="@dimen/one_level_title" />

</LinearLayout>